начал делать footer

--- a/src/index.html
+++ b/src/index.html
@@ -207,14 +207,28 @@
 						</div>
 					</div>
 				 </section>
+
+
+				 <footer class="footer">
+					<div class="bl-1">
+						<h2 class="bl-1__text">Успей купить</h2>
+						<h3 class="bl-1__title">Подпишись и успей словить все акции</h3>
+					</div>
+					<div class="bl-2">
+						<form action="">
+							<input type="email">
+							<button class="button">Подписаться</button>
+						</form>
+						<span><input type="checkbox">Подписаться на новости</span>
+
+					</div>
+				</footer>
 				</div>
 
 			</main>
 
 
-			<footer class="footer">
-				<div class="footer__bl"></div>
-			</footer>
+
 		
 	</body>
 </html>
