--- a/src/index.html
+++ b/src/index.html
@@ -212,14 +212,15 @@
 				 <footer class="footer">
 					<div class="bl-1">
 						<h2 class="bl-1__text">Успей купить</h2>
-						<h3 class="bl-1__title">Подпишись и успей словить все акции</h3>
+						<h3 class="bl-1__title">Подпишись и успей <br /> словить все акции</h3>
 					</div>
 					<div class="bl-2">
 						<form action="">
-							<input type="email">
+							<input class="email" type="email" placeholder="Email">
 							<button class="button">Подписаться</button>
 						</form>
-						<span><input type="checkbox">Подписаться на новости</span>
+						<input class="checkbox" type="checkbox">
+						<span>Подписаться на новости</span>
 
 					</div>
 				</footer>
