сделал кнопку вверх

--- a/src/index.html
+++ b/src/index.html
@@ -199,7 +199,7 @@
 							<span class='more__text'>Показать ещё 20</span>
 						</a>
 						<div class="up">
-							<a href="#">
+							<a class="svg" href="#">
 								<svg class="up-up">
 									<use xlink:href="img/icons.svg#up"></use>
 								</svg>
