сделал кнопку вверх

--- a/src/index.html
+++ b/src/index.html
@@ -198,12 +198,11 @@
 						<a href="#">
 							<span class='more__text'>Показать ещё 20</span>
 						</a>
-						<div class="up">
-							<a class="svg" href="#">
+						<div id="scrollTop" onclick="goUp()">
+					
 								<svg class="up-up">
 									<use xlink:href="img/icons.svg#up"></use>
 								</svg>
-							</a>
 						</div>
 					</div>
 				 </section>
@@ -219,8 +218,8 @@
 							<input class="email" type="email" placeholder="Email">
 							<button class="button">Подписаться</button>
 						</form>
-						<input class="checkbox" type="checkbox">
-						<span>Подписаться на новости</span>
+						<!-- <input class="checkbox" type="checkbox">
+						<span>Подписаться на новости</span> -->
 
 					</div>
 				</footer>
@@ -230,7 +229,7 @@
 
 
 
-		
+		<script src="js/main.js"></script>
 	</body>
 </html>
 
