--- a/src/index.html
+++ b/src/index.html
@@ -218,8 +218,10 @@
 							<input class="email" type="email" placeholder="Email">
 							<button class="button">Подписаться</button>
 						</form>
-						<!-- <input class="checkbox" type="checkbox">
-						<span>Подписаться на новости</span> -->
+						<div class="check">
+							<input type="checkbox" id="checkbox">
+							<label for="">Подписаться на новости</label>
+						</div>
 
 					</div>
 				</footer>
