--- a/src/index.html
+++ b/src/index.html
@@ -219,8 +219,8 @@
 							<button class="button">Подписаться</button>
 						</form>
 						<div class="check">
-							<input type="checkbox" id="checkbox">
-							<label for="">Подписаться на новости</label>
+							<input type="checkbox" class="checkbox" id="checkbox" />
+							<label for="checkbox">Подписаться на новости</label>
 						</div>
 
 					</div>
