сделал header под все размеры

--- a/src/index.html
+++ b/src/index.html
@@ -49,6 +49,12 @@
 								Звони скорее
 							</div>
 						</div>
+						<div class="m-menu">
+							<span class="line"></span>
+							<span class="line"></span>
+							<span class="line"></span>
+						</div>
+					
 					</nav>
 					<div class="nav__subtitle">
 						Найдено 349 котов
@@ -58,7 +64,7 @@
 		</div>
 			<main>
 				<div class="container">
-				 <section>
+				 <!-- <section>
 					 <div class="fl">
 						<div class="fl__text">
 							Сортировать по:
@@ -80,8 +86,8 @@
 							</a>
 						</div>
 					 </div>
-				 </section>
-				 <section class='cats'>
+				 </section> -->
+				 <!-- <section class='cats'>
 					<div class="catalog">
 						<div class="img">
 							<img src="img/kats/kats1.jpg" alt="Кот">
@@ -192,8 +198,8 @@
 						</div>
 						<a class='buttom' href="#">Купить</a>
 					</div>
-				 </section>
-				 <section>
+				 </section> -->
+				 <!-- <section>
 					<div class="more">
 						<a href="#">
 							<span class='more__text'>Показать ещё 20</span>
@@ -205,10 +211,10 @@
 								</svg>
 						</div>
 					</div>
-				 </section>
+				 </section> -->
 
 
-				 <footer class="footer">
+				 <!-- <footer class="footer">
 					<div class="bl-1">
 						<h2 class="bl-1__text">Успей купить</h2>
 						<h3 class="bl-1__title">Подпишись и успей <br /> словить все акции</h3>
@@ -224,7 +230,7 @@
 						</div>
 
 					</div>
-				</footer>
+				</footer> -->
 				</div>
 
 			</main>
@@ -232,6 +238,8 @@
 
 
 		<script src="js/main.js"></script>
+		<!-- <script src="js/jquery-3.5.1.min.js"></script> -->
+		<!-- <script src="js/jquery.js"></script> -->
 	</body>
 </html>
 
