делал секцию сортировки

--- a/src/index.html
+++ b/src/index.html
@@ -34,6 +34,7 @@
 			<header class="head">
 				<div class="container">
 					<nav class="nav">
+						
 						<div class="nav__logo">
 							<img src="img/logo 1.png" alt="Лого">
 						</div>
@@ -64,7 +65,7 @@
 		</div>
 			<main>
 				<div class="container">
-				 <!-- <section>
+				 <section>
 					 <div class="fl">
 						<div class="fl__text">
 							Сортировать по:
@@ -86,7 +87,7 @@
 							</a>
 						</div>
 					 </div>
-				 </section> -->
+				 </section>
 				 <!-- <section class='cats'>
 					<div class="catalog">
 						<div class="img">
