пятое изменение сортировки

--- a/src/index.html
+++ b/src/index.html
@@ -65,7 +65,7 @@
 		</div>
 			<main>
 				<div class="container">
-				 <section>
+				 <section class="fl-block">
 					 <div class="fl">
 						<div class="fl__text">
 							Сортировать по:
