правка main под все медия

--- a/src/index.html
+++ b/src/index.html
@@ -88,7 +88,7 @@
 						</div>
 					 </div>
 				 </section>
-				 <!-- <section class='cats'>
+				 <section class='cats'>
 					<div class="catalog">
 						<div class="img">
 							<img src="img/kats/kats1.jpg" alt="Кот">
@@ -199,7 +199,7 @@
 						</div>
 						<a class='buttom' href="#">Купить</a>
 					</div>
-				 </section> -->
+				 </section>
 				 <!-- <section>
 					<div class="more">
 						<a href="#">
