не работает кнопка вверх

--- a/src/index.html
+++ b/src/index.html
@@ -200,22 +200,21 @@
 						<a class='buttom' href="#">Купить</a>
 					</div>
 				 </section>
-				 <!-- <section>
+				 <section>
 					<div class="more">
 						<a href="#">
 							<span class='more__text'>Показать ещё 20</span>
 						</a>
 						<div id="scrollTop" onclick="goUp()">
-					
 								<svg class="up-up">
 									<use xlink:href="img/icons.svg#up"></use>
 								</svg>
 						</div>
 					</div>
-				 </section> -->
+				 </section>
 
 
-				 <!-- <footer class="footer">
+				 <footer class="footer">
 					<div class="bl-1">
 						<h2 class="bl-1__text">Успей купить</h2>
 						<h3 class="bl-1__title">Подпишись и успей <br /> словить все акции</h3>
@@ -231,7 +230,7 @@
 						</div>
 
 					</div>
-				</footer> -->
+				</footer>
 				</div>
 
 			</main>
@@ -239,8 +238,6 @@
 
 
 		<script src="js/main.js"></script>
-		<!-- <script src="js/jquery-3.5.1.min.js"></script> -->
-		<!-- <script src="js/jquery.js"></script> -->
 	</body>
 </html>
 
