--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,3 @@
-<!-- Сообщаем браузеру как стоит обрабатывать эту страницу -->
 <!DOCTYPE html>
 <!-- Оболочка документа, указываем язык содержимого -->
 <html lang="ru">
@@ -214,7 +213,7 @@
 				 </section>
 
 
-				 <footer class="footer">
+				 <!-- <footer class="footer">
 					<div class="bl-1">
 						<h2 class="bl-1__text">Успей купить</h2>
 						<h3 class="bl-1__title">Подпишись и успей <br /> словить все акции</h3>
@@ -230,7 +229,7 @@
 						</div>
 
 					</div>
-				</footer>
+				</footer> -->
 				</div>
 
 			</main>
