--- a/src/index.html
+++ b/src/index.html
@@ -213,7 +213,7 @@
 				 </section>
 
 
-				 <!-- <footer class="footer">
+				 <footer class="footer">
 					<div class="bl-1">
 						<h2 class="bl-1__text">Успей купить</h2>
 						<h3 class="bl-1__title">Подпишись и успей <br /> словить все акции</h3>
@@ -229,7 +229,7 @@
 						</div>
 
 					</div>
-				</footer> -->
+				</footer>
 				</div>
 
 			</main>
