--- a/src/index.html
+++ b/src/index.html
@@ -218,7 +218,7 @@
 						<h2 class="bl-1__text">Успей купить</h2>
 						<h3 class="bl-1__title">Подпишись и успей <br /> словить все акции</h3>
 					</div>
-					<div class="bl-2">
+					<div class="bl-2" id="проба">
 						<form action="">
 							<input class="email" type="email" placeholder="Email">
 							<button class="button">Подписаться</button>
